# Telegram-Anomaly-Detector-POC

./: .gitignore  QUICKSTART.md  README.md  README2.md  docker-compose.yml
admin-api-service/src/main/java/ua/edu/ucu/de/fp/monitoring/admin/api/model/: GroupDTO.java  (+1 more)
anomaly-detection-service/: pom.xml
anomaly-detection-service/src/main/resources/: application.yml
docker/: init-db.sh
frontend/src/pages/: Dashboard.css  Dashboard.jsx  GroupManagement.css  GroupManagement.jsx  PipelineManagement.jsx
frontend/src/services/: api.js
notification-service/src/main/resources/: schema.sql
telegram-ingestion-service/: .env.dev.docker.example  .env.dev.local.example  Dockerfile  Dockerfile_poetry  README.md
telegram-ingestion-service-telethon/: .env.example  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  result_example.json
telegram-ingestion-service-telethon/src/telegram_ingestion/: cache.py  config.py  database.py  filter.py  geometry.py  http_api.py  main.py  models.py  publisher.py
telegram-ingestion-service-telethon/src/telegram_ingestion/source/: file_source.py  random_messages_source.py
telegram-ingestion-service/src/telegram_ingestion/: cache.py  config.py  database.py  error.py  filter.py  geometry.py  http_api.py  main.py  models.py  publisher.py
telegram-ingestion-service/src/telegram_ingestion/source/: file_source.py  random_messages_source.py  source.py  telegram_source.py
telegram-ingestion-service/src/telegram_ingestion/util/: serialization.py
telegram-ingestion-service/test/resources/: group1.json  random_messages.toml
(+28 files in other folders)
